# Lambda-Parse-and-Play

./: CHANGELOG.md  LICENSE  README.md  lambda-calc.cabal
.github/workflows/: haskell.yml
.stack-work/: stack.sqlite3
.stack-work/ghci/453b898d/: cabal_macros.h
.stack-work/ghci/45668917/: cabal_macros.h
.stack-work/ghci/a86659bc/: cabal_macros.h
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
examples/: Infinity.lam  boolean.lam  church.lam  identity.lam
scripts/: test-examples.sh  test-infinity.sh
src/: Main.hs
test/: IntegrationTests.hs  PerformanceTests.hs  Spec.hs  UnitTests.hs
