cabal-version: 2.4   

name:           lambda-calc
version:        0.1.0.0
build-type:     Simple

synopsis:       Simple λ-calculus interpreter
author:         Your Name
license:        BSD-3-Clause
category:       Education
maintainer:     you@example.com

executable lambda-calc
  hs-source-dirs:  src
  main-is:         Main.hs
  default-language: Haskell2010
  ghc-options:     -Wall

  build-depends:
      base       >= 4.14 && < 5
    , containers >= 0.6
    , parsec     >= 3.1 
